--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
