--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation "androidx.room:room-runtime:2.3.0"
 }
