--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
         viewBinding = true
     }
 }
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -56,5 +57,16 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation "androidx.room:room-runtime:2.3.0"
+
+    def room_version = "2.3.0"
+
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$room_version")
+
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
 }
