--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:$room_version")
+
+    implementation "com.airbnb.android:lottie:3.4.0"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
