--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,7 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
 
     implementation "com.airbnb.android:lottie:3.4.0"
+
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation("com.google.android.material:material:1.1.0-beta01")
 }
